; ModuleID = '/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_stat.c'
source_filename = "/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_entry = type { i32, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.statbuf = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_entry_stat(%struct.proc_entry* %0, %struct.statbuf* %1) #0 {
  %3 = alloca %struct.proc_entry*, align 8
  %4 = alloca %struct.statbuf*, align 8
  store %struct.proc_entry* %0, %struct.proc_entry** %3, align 8
  store %struct.statbuf* %1, %struct.statbuf** %4, align 8
  %5 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %6 = call i32 @memset(%struct.statbuf* %5, i32 0, i32 8)
  %7 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %8 = call i32 @proc_entry_mode(%struct.proc_entry* %7)
  %9 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %10 = getelementptr inbounds %struct.statbuf, %struct.statbuf* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %12 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %11, i32 0, i32 2
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %17 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = shl i32 %18, 16
  %20 = or i32 %15, %19
  %21 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %22 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = trunc i64 %23 to i32
  %25 = shl i32 %24, 48
  %26 = or i32 %20, %25
  %27 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %28 = getelementptr inbounds %struct.statbuf, %struct.statbuf* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  ret i32 0
}

declare dso_local i32 @memset(%struct.statbuf*, i32, i32) #1

declare dso_local i32 @proc_entry_mode(%struct.proc_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
